--- a/simpsons_classificattion.ipynb
+++ b/simpsons_classificattion.ipynb
@@ -52,9 +52,6 @@
     "from sklearn.utils import class_weight\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import sklearn.metrics as metrics\n",
-    "\n",
-    "\n",
     "\n",
     "#Deep Learning Imports\n",
     "from keras.models import Sequential\n",
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,9 +282,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "16746/16746 [==============================] - 80s 5ms/step - loss: 2.4751 - acc: 0.3163\n",
+      "Epoch 2/15\n",
+      "16746/16746 [==============================] - 91s 5ms/step - loss: 1.5438 - acc: 0.5795\n",
+      "Epoch 3/15\n",
+      "16746/16746 [==============================] - 85s 5ms/step - loss: 1.1203 - acc: 0.6894\n",
+      "Epoch 4/15\n",
+      "16746/16746 [==============================] - 90s 5ms/step - loss: 0.8594 - acc: 0.7567\n",
+      "Epoch 5/15\n",
+      "16746/16746 [==============================] - 85s 5ms/step - loss: 0.6433 - acc: 0.8180\n",
+      "Epoch 6/15\n",
+      "16746/16746 [==============================] - 83s 5ms/step - loss: 0.4791 - acc: 0.8579\n",
+      "Epoch 7/15\n",
+      "16746/16746 [==============================] - 89s 5ms/step - loss: 0.3611 - acc: 0.8915\n",
+      "Epoch 8/15\n",
+      "16746/16746 [==============================] - 87s 5ms/step - loss: 0.2865 - acc: 0.9139\n",
+      "Epoch 9/15\n",
+      "16746/16746 [==============================] - 92s 5ms/step - loss: 0.2375 - acc: 0.9231\n",
+      "Epoch 10/15\n",
+      "16746/16746 [==============================] - 83s 5ms/step - loss: 0.1877 - acc: 0.9393\n",
+      "Epoch 11/15\n",
+      "16746/16746 [==============================] - 90s 5ms/step - loss: 0.1670 - acc: 0.9492\n",
+      "Epoch 12/15\n",
+      "16746/16746 [==============================] - 84s 5ms/step - loss: 0.1649 - acc: 0.9464\n",
+      "Epoch 13/15\n",
+      "16746/16746 [==============================] - 82s 5ms/step - loss: 0.1594 - acc: 0.9509\n",
+      "Epoch 14/15\n",
+      "16746/16746 [==============================] - 87s 5ms/step - loss: 0.1334 - acc: 0.9601\n",
+      "Epoch 15/15\n",
+      "16746/16746 [==============================] - 84s 5ms/step - loss: 0.1193 - acc: 0.9635\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1a1e327860>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def create_model(X_train,y_train):\n",
     "    #The input and output shape of our model\n",
@@ -300,10 +344,11 @@
     "    model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
     "    model.add(Conv2D(64, (5, 5), activation='relu'))\n",
     "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "    model.add(Flatten())\n",
     "    model.add(Dense(128, activation='relu'))\n",
     "    model.add(Dense(64, activation='relu'))\n",
-    "    model.add(Dense(32, activation='relu'))\n",
     "    model.add(Dense(output_shape, activation='softmax'))\n",
     "    model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
     "    return model\n",
@@ -320,54 +365,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "16746/16746 [==============================] - 77s 5ms/step - loss: 2.6312 - acc: 0.3018\n",
-      "Epoch 2/10\n",
-      "16746/16746 [==============================] - 80s 5ms/step - loss: 1.8103 - acc: 0.5250\n",
-      "Epoch 3/10\n",
-      "16746/16746 [==============================] - 78s 5ms/step - loss: 1.3775 - acc: 0.6289\n",
-      "Epoch 4/10\n",
-      "16746/16746 [==============================] - 79s 5ms/step - loss: 1.0649 - acc: 0.7106\n",
-      "Epoch 5/10\n",
-      "16746/16746 [==============================] - 82s 5ms/step - loss: 0.8056 - acc: 0.7770\n",
-      "Epoch 6/10\n",
-      "16746/16746 [==============================] - 82s 5ms/step - loss: 0.6042 - acc: 0.8305\n",
-      "Epoch 7/10\n",
-      "16746/16746 [==============================] - 75s 4ms/step - loss: 0.4354 - acc: 0.8769\n",
-      "Epoch 8/10\n",
-      "16746/16746 [==============================] - 79s 5ms/step - loss: 0.2840 - acc: 0.9182\n",
-      "Epoch 9/10\n",
-      "16746/16746 [==============================] - 82s 5ms/step - loss: 0.2185 - acc: 0.9346\n",
-      "Epoch 10/10\n",
-      "16746/16746 [==============================] - 82s 5ms/step - loss: 0.1489 - acc: 0.9571\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1a48fb8f28>"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batch_size = 64 \n",
-    "num_epochs = 10\n",
-    "model.fit(X_train, y_train_one_hot,batch_size=batch_size,epochs=num_epochs,class_weight=class_weights)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -377,15 +374,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7499402913780749\n"
+     ]
+    }
+   ],
    "source": [
     "#Get the predictions from our model\n",
     "preds = model.predict(X_test)\n",
     "\n",
     "#Convert the predictions to a one hot encoded vector \n",
-    "one_hot_prds = np.zeros_like(a)\n",
+    "one_hot_prds = np.zeros_like(preds)\n",
     "one_hot_prds[np.arange(len(preds)), preds.argmax(1)] = 1\n",
     "\n",
     "#Compare the predictions to the test labels to get the Test Classification Accuracy\n",
@@ -402,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +424,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n",
       "Prediction:  milhouse_van_houten\n",
       "Actual:  milhouse_van_houten\n",
       "\n"
@@ -439,7 +443,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n",
       "Prediction:  lisa_simpson\n",
       "Actual:  lisa_simpson\n",
       "\n"
@@ -459,8 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "Prediction:  homer_simpson\n",
+      "Prediction:  krusty_the_clown\n",
       "Actual:  homer_simpson\n",
       "\n"
      ]
@@ -479,7 +481,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
       "Prediction:  krusty_the_clown\n",
       "Actual:  krusty_the_clown\n",
       "\n"
@@ -499,7 +500,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
       "Prediction:  apu_nahasapeemapetilon\n",
       "Actual:  apu_nahasapeemapetilon\n",
       "\n"
@@ -516,6 +516,13 @@
     "    print(\"Actual: \", reverse_lookup[np.argmax(y_test_one_hot[i])])\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
